eZ Online Editor 5.0 extension Changelog

5.0rc7
* Changed javascript / stylesheet cache to use 'public/' path
  NOTE: Rewrite rules changed, see INSTALL for the new rewrite rule
* Added Italian translation contributed by Sandra Parente


5.0rc6
* Fixed #13548: Javascript error, when embedding video objects with empty ezimage attribute
* Regression #13486: Can't change properties of OL, LI or UL
* Fixed #13599: Header removed from custom tags
* updated to TinyMCE 3.2 and enabled (ez)inlinepopup by default


5.0rc5
* Fixed ezoescript and ezoecss to load files in correct order when arrays are used
* EditorDialogCSSFileList should prepend 'stylesheets/' folder automatically like
  other css ini settings.
* Fixed #013505: Anchor in links are lost
* Updated TinyMCE to 3.1.1
* Added support for setting image alt text when uploading image
* Implemented #013507: Bookmarks in ezoe 5
* Fixed #013509: Layout on help or others "long text" pages
* Implemented #013512: Class list in search form should be alphabetical sorted
* Made mini editor layout enabled by default (uncommented it)
* code cleanup (removed dependency on global js variable eZOeMCE, use tinyMCE settings and translations instead)
* do not remove attribute value if default value (same behavour as simple xml handler)
* Fixed #013535: Litteral should use a bigger and a monospace font family
* Added ezinlinepopups plugin as possible workaround for issue 13549 & modal dialogs
* Reintroduced CustomAttributeStyleMap, but only for limited type of styles (see ezoe.ini)
* Fixed: absolute urls to same domain where converted to relative urls by TinyMCE


5.0rc4
* Fixed regression #013486: Can't change properties of OL, LI or UL


5.0rc3
* regression in rc2 caused inserting embed tags not to work in some browsers
* updated doc/ezoe_intro.odt with new screen shoots and text.

5.0rc2
* Cleaned up i18n use and Nor-NO, and synced untranslated.ts with the Nor-NO file.