@@ -30,6 +30,9 @@ DevelopmentMode=disabled
 #   but looses preview functionality. (name of embed object is shown if you hover the icon though)
 CompatibilityMode=disabled
 
+# Validates embed objects and gives a warning if it's in trash
+ValidateEmbedObjects=disabled
+
 
 # Map custom attribute names to style values so they are previewed in the editor.
 # supported styles are limited to the following types:
